--- a/app/src/main/res/layout/activity_case_details.xml
+++ b/app/src/main/res/layout/activity_case_details.xml
@@ -33,16 +33,16 @@
             <TextView
                 android:layout_width="5dp"
                 android:layout_height="match_parent"
-                android:background="@android:color/black"/>
+                android:background="@android:color/black" />
 
             <ImageView
                 android:id="@+id/edit_case_details_iv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/edit_icon_16"
                 android:layout_gravity="right"
                 android:layout_margin="10dp"
-                android:padding="5dp"/>
+                android:background="@drawable/edit_icon_16"
+                android:padding="5dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -55,19 +55,21 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp">
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoBoldTextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
                         android:text="Court"
-                        android:textStyle="bold"
-                        android:textColor="@android:color/black"/>
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoLightTextView
                         android:id="@+id/court_tv"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="7" />
+                        android:layout_weight="7"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
                 </LinearLayout>
 
@@ -76,19 +78,21 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp">
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoBoldTextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
                         android:text="Judge"
-                        android:textStyle="bold"
-                        android:textColor="@android:color/black"/>
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoLightTextView
                         android:id="@+id/judge_tv"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="7" />
+                        android:layout_weight="7"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
                 </LinearLayout>
 
@@ -97,19 +101,21 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp">
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoBoldTextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
                         android:text="Case no"
-                        android:textStyle="bold"
-                        android:textColor="@android:color/black"/>
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoLightTextView
                         android:id="@+id/case_number_tv"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="7" />
+                        android:layout_weight="7"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
                 </LinearLayout>
 
@@ -118,19 +124,21 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp">
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoBoldTextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
                         android:text="Parties"
-                        android:textStyle="bold"
-                        android:textColor="@android:color/black"/>
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoLightTextView
                         android:id="@+id/parties_name_tv"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="7" />
+                        android:layout_weight="7"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
                 </LinearLayout>
 
@@ -139,19 +147,21 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp">
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoBoldTextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
                         android:text="Next Date"
-                        android:textStyle="bold"
-                        android:textColor="@android:color/black"/>
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoLightTextView
                         android:id="@+id/next_date_tv"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="7" />
+                        android:layout_weight="7"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
                 </LinearLayout>
 
@@ -160,19 +170,21 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp">
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoBoldTextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
                         android:text="Stage"
-                        android:textStyle="bold"
-                        android:textColor="@android:color/black"/>
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoLightTextView
                         android:id="@+id/stage_tv"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="7" />
+                        android:layout_weight="7"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
                 </LinearLayout>
 
@@ -181,19 +193,21 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp">
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoBoldTextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
                         android:text="Prev date"
-                        android:textStyle="bold"
-                        android:textColor="@android:color/black"/>
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoLightTextView
                         android:id="@+id/prev_date_tv"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="7" />
+                        android:layout_weight="7"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
                 </LinearLayout>
 
@@ -202,19 +216,21 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp">
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoBoldTextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
                         android:text="Client"
-                        android:textStyle="bold"
-                        android:textColor="@android:color/black"/>
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoLightTextView
                         android:id="@+id/client_tv"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="7" />
+                        android:layout_weight="7"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
                 </LinearLayout>
 
@@ -223,41 +239,45 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp">
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoBoldTextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
                         android:text="Client Phone"
-                        android:textStyle="bold"
-                        android:textColor="@android:color/black"/>
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoLightTextView
                         android:id="@+id/client_phone_tv"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="7" />
+                        android:layout_weight="7"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="15dp">
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="15dp">
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoBoldTextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
                         android:text="Category"
-                        android:textStyle="bold"
-                        android:textColor="@android:color/black"/>
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
-                    <TextView
+                    <com.example.devrathrathee.legal.utils.RobotoLightTextView
                         android:id="@+id/category_tv"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="7" />
+                        android:layout_weight="7"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
 
                 </LinearLayout>
             </LinearLayout>
