--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,18 +13,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@drawable/white_background">
+        android:background="@drawable/white_background"
+        android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_alignParentTop="true"
             android:layout_gravity="center_horizontal"
             android:background="@android:color/black"
-            app:titleTextColor="@android:color/white"/>
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:titleTextColor="@android:color/white" />
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
@@ -35,8 +35,8 @@
             android:elevation="6dp"
             android:minHeight="?attr/actionBarSize"
             app:tabIndicatorColor="@android:color/white"
-            app:tabTextColor="@android:color/white"
-            app:tabTextAppearance="@style/CustomTabText"/>
+            app:tabTextAppearance="@style/CustomTabText"
+            app:tabTextColor="@android:color/white" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/cases_view_pager"
@@ -45,7 +45,8 @@
             android:layout_below="@+id/tab_layout"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"/>
 
     </LinearLayout>
 
@@ -56,8 +57,8 @@
         android:layout_gravity="start"
         android:background="@drawable/menu_background"
         app:headerLayout="@layout/nav_header_home"
-        app:itemTextColor="@android:color/white"
         app:itemIconTint="#FFFFFF"
+        app:itemTextColor="@android:color/white"
         app:menu="@menu/activity_home_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
