--- a/app/src/main/res/layout/legal_query_item.xml
+++ b/app/src/main/res/layout/legal_query_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="100dp"
     android:layout_margin="5dp"
     android:background="@android:color/darker_gray"
     android:elevation="5dp"
@@ -11,72 +11,86 @@
     <RelativeLayout
         android:id="@+id/card_relative_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        >
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="5dp"
+            android:layout_height="match_parent"
+            android:background="@android:color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginLeft="10dp"
+            android:orientation="vertical"
+            android:padding="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp">
 
-                <TextView
+                <com.example.devrathrathee.legal.utils.RobotoBoldTextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
                     android:text="Customer"
-                    android:textStyle="bold" />
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/edit_text_size" />
 
-                <TextView
+                <com.example.devrathrathee.legal.utils.RobotoLightTextView
                     android:id="@+id/customer_name_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="7" />
+                    android:layout_weight="7"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/edit_text_size" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
+                android:layout_marginTop="10dp">
 
-                <TextView
+                <com.example.devrathrathee.legal.utils.RobotoBoldTextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
                     android:text="Quote Type"
-                    android:textStyle="bold" />
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/edit_text_size" />
 
-                <TextView
+                <com.example.devrathrathee.legal.utils.RobotoLightTextView
                     android:id="@+id/quote_type_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="7" />
+                    android:layout_weight="7"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/edit_text_size" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
+                android:layout_marginTop="10dp">
 
-                <TextView
+                <com.example.devrathrathee.legal.utils.RobotoBoldTextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
                     android:text="Status"
-                    android:textStyle="bold" />
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/edit_text_size" />
 
-                <TextView
+                <com.example.devrathrathee.legal.utils.RobotoLightTextView
                     android:id="@+id/status_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="7" />
+                    android:layout_weight="7"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/edit_text_size" />
 
             </LinearLayout>
 
@@ -88,7 +102,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="5dp"
-            android:background="@drawable/ic_chevron_right_black_24dp" />
+            android:background="@drawable/ic_keyboard_arrow_left_black_24dp" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
