--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -22,9 +22,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:textSize="25sp"
+        android:textSize="22sp"
         android:textColor="@android:color/white"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:maxLines="2"/>
 
 
 </LinearLayout>
