- matter send and receive. - add and update case

--- a/app/src/main/res/layout/fragment_today_cases.xml
+++ b/app/src/main/res/layout/fragment_today_cases.xml
@@ -11,4 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_case_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="20dp"
+        android:backgroundTint="@android:color/black"
+        android:src="@drawable/ic_add_white_24dp" />
+
 </FrameLayout>
