--- a/app/src/main/res/layout/activity_add_case.xml
+++ b/app/src/main/res/layout/activity_add_case.xml
@@ -221,6 +221,7 @@
                     </LinearLayout>
 
                     <Button
+                        android:id="@+id/add_case_button"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
