--- a/app/src/main/res/layout/fragment_tomorrow_cases.xml
+++ b/app/src/main/res/layout/fragment_tomorrow_cases.xml
@@ -6,9 +6,18 @@
     tools:context=".views.TomorrowCasesFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:layout_margin="10dp"
         android:id="@+id/tomorrow_cases_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_margin="10dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_case_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="20dp"
+        android:backgroundTint="@android:color/black"
+        android:src="@drawable/ic_add_white_24dp" />
 
 </FrameLayout>
